<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/settings"
        app:showAsAction="always"
        android:title=""
        android:icon="@drawable/ic_settings_white">
        <menu>
    <item android:id="@+id/home_menu"
        android:icon="@drawable/ic_into"
        android:title="@string/Home"
        />

    <item android:id="@+id/lessons_menu"
        android:icon="@drawable/ic_lesson"
        android:title="@string/lessons"/>

    <item android:id="@+id/feedback_menu"
        android:icon="@drawable/ic_feedback"
        android:title="@string/feedback"/>

    <item android:id="@+id/language_menu"
         android:icon="@drawable/ic_settings_black"
         android:title="Language"
         android:iconTint="@android:color/black"/>
            <item android:id="@+id/about_menu"
                android:icon="@drawable/ic_about_black"
                android:title="About Us"
                android:iconTint="@android:color/black"/>
        </menu>
    </item>

</menu>