<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_intro"
            android:icon="@drawable/ic_into"
            android:title="@string/introduction"/>

        <item android:id="@+id/nav_lessons"
            android:icon="@drawable/ic_lesson"
            android:title="@string/lessons"/>

        <item android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>

            <item android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send Feedback"/>

<!--        <item android:id="@+id/settings_menu"-->
<!--            android:icon="@drawable/ic_settings_black"-->
<!--            android:title="Settings"-->
<!--            android:iconTint="@android:color/black"/>-->
        </menu>
    </item>

</menu>