<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/skyblue"
tools:context=".English.MainActivity"
android:id="@+id/drawer_layout"
android:fitsSystemWindows="true"
tools:openDrawer="start">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_container">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="10dp">

            <LinearLayout android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAlignment="center"
                    android:includeFontPadding="true"
                    android:paddingTop="20dp"
                    android:textSize="21sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/white"
                    android:drawableTop="@drawable/adventist"
                    android:drawableTint="@color/white"
                    android:padding="20dp"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:includeFontPadding="true"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-black"
                    android:paddingBottom="20dp"
                    android:textSize="30sp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">
                    <Button android:id="@+id/intro_btn"
                        android:layout_width="0dp"
                        android:layout_weight="10"
                        android:layout_height="wrap_content"
                        android:text="@string/introduction"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimary"/>

                    <View
                        android:layout_width="7dp"
                        android:layout_height="7dp"
                        android:layout_gravity="center_horizontal"
                        />
                    <Button android:id="@+id/theme_song_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="Theme Song"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimary"/>
                </LinearLayout>
                <View
                    android:layout_width="150dp"
                    android:layout_height="7dp"
                    android:layout_gravity="center_horizontal"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">
                    <Button android:id="@+id/lessons_btn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/lessons"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimary"/>
                    <View
                        android:layout_width="7dp"
                        android:layout_height="7dp"
                        android:layout_gravity="center_horizontal"
                        />
                    <Button android:id="@+id/feedback_btn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/feedback"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimary"/>
                </LinearLayout>
                <View
                    android:layout_width="150dp"
                    android:layout_height="7dp"
                    android:layout_gravity="center_horizontal"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">
                    <Button android:id="@+id/about_btn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="About Us"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimary"/>
                </LinearLayout>
                <!--            to be removed in final app-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="23dp"
                    android:textStyle="bold"
                    android:text="Please note this is a beta application for testing only">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="Your feedback is greatly valued, use the feedback button to let us know your thoughts">
                </TextView>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>
<com.google.android.material.navigation.NavigationView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:id="@+id/nav_view"
    app:headerLayout="@layout/nav_header"
    app:menu="@menu/drawer_menu"
    />
</androidx.drawerlayout.widget.DrawerLayout>